refactor(publishing): Better publishing workflow with changelog. Yanked from v4 (#1024)

--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
     "build": "npm run test && npm run webpack",
     "release": "./publish.sh",
-    "release:patch": "./publish.sh patch",
-    "release:minor": "./publish.sh minor",
-    "release:major": "./publish.sh major",
-    "clean": "rimraf coverage",
+    "release:patch": "./scripts/publish.sh patch",
+    "release:minor": "./scripts/publish.sh minor",
+    "release:major": "./scripts/publish.sh major",
+    "preversion": "./scripts/preversion.sh",
+    "version": "./scripts/version.sh",
+    "postversion": "./scripts/postversion.sh",
+    "clean": "rimraf dist coverage",
     "reinstall": "rimraf flow-typed && rimraf node_modules && npm install && flow-typed install",
     "debug": "cross-env NODE_ENV=debug",
     "demo": "serve ./demo -l 1337",
@@ -55,6 +58,7 @@
   "readmeFilename": "README.md",
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
+    "conventional-changelog-cli": "^2.0.11",
     "flow-bin": "^0.81.0",
     "fs-extra": "^4.0.2",
     "grumbler-scripts": "^3",
