--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run lint && npm run flow-typed && npm run flow && npm run jest-ssr && npm run karma && npm run jest-screenshot",
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
     "build": "npm run test && npm run webpack",
-    "release": "./publish.sh",
+    "release": "./scripts/publish.sh",
     "release:patch": "./scripts/publish.sh patch",
     "release:minor": "./scripts/publish.sh minor",
     "release:major": "./scripts/publish.sh major",
