--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "grumbler-scripts": "^3",
     "imagemagick": "^0.1.3",
     "imgur": "^0.2.1",
+    "jest-puppeteer": "^4.1.1",
     "memory-fs": "^0.4.1",
     "mocha": "^4",
     "pixelmatch": "^4.0.2",
