Add puppeteer download host

--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,4 @@ registry=http://registry.npmjs.com/
 save=false
 message="chore(release): %s :tada:"
 package-lock=false
+puppeteer_download_host='https://commondatastorage.googleapis.com'
