Add risk data collector to wallet

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   "dependencies": {
     "@paypal/common-components": "^1.0.3",
     "@paypal/funding-components": "^1.0.7",
+    "@paypal/risk-data-collector": "^1.0.1",
     "@paypal/sdk-client": "^4.0.0",
     "@paypal/sdk-constants": "^1.0.1",
     "@paypal/sdk-logos": "^1.0.17",
