--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jest-e2e": "rm -f ./test/e2e/screenshots/*.png && jest test/e2e",
     "get-size": "gzip -9 < dist/size.min.js | wc -c",
     "check-size": "npm run webpack-size && if [ $(npm run -s get-size) -ge 60000 ]; then echo 'Bundle size greater than 60k'; exit 1; else npm run delete-size; fi;",
-    "delete-size": "rm dist/size.js dist/size.min.js dist/report.html"
+    "delete-size": "rm dist/size.* dist/report.html"
   },
   "files": [
     "src/",
