--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.paypal.com/paypal/paypal-checkout.git"
+    "url": "git://github.com/paypal/paypal-checkout-components.git"
   },
   "homepage": "https://developer.paypal.com/",
   "keywords": [
