--- a/package.json
+++ b/package.json
@@ -61,21 +61,21 @@
   "license": "Apache-2.0",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "babel-core": "^7.0.0-bridge.0",
-    "conventional-changelog-cli": "^2.0.11",
-    "flow-bin": "^0.100.0",
-    "fs-extra": "^4.0.2",
-    "grumbler-scripts": "^3",
-    "imagemagick": "^0.1.3",
-    "imgur": "^0.2.1",
-    "memory-fs": "^0.4.1",
-    "mocha": "^4",
-    "mocketeer": "^0.3.0",
-    "pixelmatch": "^4.0.2",
-    "pngjs": "^3.3.0",
-    "puppeteer": "^1.14.0",
-    "serve": "^10.1.2",
-    "sync-browser-mocks": "^2.0.0"
+    "babel-core": "7.0.0-bridge.0",
+    "conventional-changelog-cli": "2.0.34",
+    "flow-bin": "0.100.0",
+    "fs-extra": "4.0.3",
+    "grumbler-scripts": "3.0.70",
+    "imagemagick": "0.1.3",
+    "imgur": "0.2.1",
+    "memory-fs": "0.4.1",
+    "mocha": "4.1.0",
+    "mocketeer": "0.3.1",
+    "pixelmatch": "4.0.2",
+    "pngjs": "3.4.0",
+    "puppeteer": "1.20.0",
+    "serve": "10.1.2",
+    "sync-browser-mocks": "2.0.8"
   },
   "dependencies": {
     "@paypal/common-components": "^1.0.10",
