--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-registry=http://registry.npmjs.com/
+registry=http://registry.npmjs.org/
 save=false
 message="chore(release): %s :tada:"
 package-lock=false
