--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
         "grumbler-scripts": "^3.0.70",
         "imagemagick": "^0.1.3",
         "imgur": "^0.3.1",
+        "karma": "^5.2.3",
+        "karma-coverage": "^2.0.3",
         "memory-fs": "^0.5.0",
         "mocha": "^4.1.0",
         "mocketeer": "^0.3.1",
