--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "demo": "serve ./demo -l 1337",
         "eslint-find-rules": "eslint-find-rules --current .eslintrc.js --unused --plugin",
         "jest-screenshot": "jest test/screenshot --env=node --no-cache",
-        "jest-ssr": "jest test/ssr --env=node --no-cache",
+        "jest-ssr": "jest test/ssr --env=node --no-cache --collectCoverage --collectCoverageFrom='src/' --coverageDirectory='coverage/jest'",
         "jest-e2e": "rm -f ./test/e2e/screenshots/*.png && jest test/e2e",
         "get-size": "gzip -9 < dist/size.min.js | wc -c",
         "check-size": "npm run webpack-size && if [ $(npm run -s get-size) -ge 70000 ]; then echo 'Bundle size greater than 65k'; exit 1; else npm run delete-size; fi;",
