Fix BundleMon configuration (#1781)
* override CI_COMMIT_SHA var in BundleMon step

* change BundleMon to post only GitHub check run

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,3 +48,4 @@ jobs:
         run: npm run check-size
         env:
           BUNDLEMON_PROJECT_ID: 6166e8ee491d1e00090fee72
+          CI_COMMIT_SHA: ${{github.event.pull_request.head.sha || github.sha}}
