--- a/.bundlemonrc.json
+++ b/.bundlemonrc.json
@@ -13,7 +13,7 @@
       "github",
       {
         "checkRun": true,
-        "commitStatus": true,
+        "commitStatus": false,
         "prComment": false
       }
     ]
