--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: build
 on:
-  # run on push but only for the master branch
+  # run on push but only for the main branch
   push:
     branches:
-      - master
+      - main
   # run for every pull request
   pull_request: {}
 jobs:
@@ -33,7 +33,7 @@ jobs:
         run: npm run build
 
       - name: ⬆️ Upload karma coverage report
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
         with:
           directory: ./coverage/karma
           flags: karma
