--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "jest-ssr": "jest test/ssr --env=node --no-cache --collectCoverage --collectCoverageFrom='src/' --coverageDirectory='coverage/jest'",
         "jest-e2e": "rm -f ./test/e2e/screenshots/*.png && jest test/e2e",
         "check-size": "npm run webpack-size && bundlemon && npm run delete-size",
-        "delete-size": "rm dist/size.* dist/report.html"
+        "delete-size": "rm dist/size.* dist/report.html",
+        "prepare": "husky install"
     },
     "files": [
         "src/",
@@ -63,15 +64,19 @@
         "flow-bin": "0.155.0",
         "fs-extra": "^10.0.0",
         "grumbler-scripts": "^5.0.1",
+        "husky": "^7.0.4",
         "imagemagick": "^0.1.3",
         "imgur": "^0.3.1",
         "karma": "^5.2.3",
         "karma-coverage": "^2.0.3",
+        "lint-staged": "^12.3.4",
         "memory-fs": "^0.5.0",
         "mocha": "^4.1.0",
         "mocketeer": "^0.3.1",
         "pixelmatch": "^5.2.1",
         "pngjs": "^6.0.0",
+        "prettier": "^2.5.1",
+        "prettier-plugin-sh": "^0.8.1",
         "puppeteer": "^1.20.0",
         "serve": "^13.0.0",
         "sync-browser-mocks": "^2.0.8"
@@ -88,5 +93,8 @@
         "post-robot": "^10.0.0",
         "zalgo-promise": "^1.0.10",
         "zoid": "^9.0.0"
+    },
+    "lint-staged": {
+        "*.sh": "prettier --write"
     }
 }
