chore(deps): ignore flow-bin updates (#1886)

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,6 +13,7 @@
   "labels": [
     ":christmas_tree: dependencies"
   ],
+  "ignoreDeps": ["flow-bin"],
   "packageRules": [
     {
       "packagePatterns": "^babel",
