--- a/.flowconfig
+++ b/.flowconfig
@@ -11,8 +11,8 @@
 [libs]
 flow-typed
 node_modules/grumbler-scripts/declarations.js
-node_modules/zoid/src/declarations.js
-node_modules/post-robot/src/declarations.js
+node_modules/@krakenjs/zoid/src/declarations.js
+node_modules/@krakenjs/post-robot/src/declarations.js
 node_modules/@paypal/sdk-client/src/declarations.js
 src/declarations.js
 test/declarations.js
