--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "license": "Apache-2.0",
     "readmeFilename": "README.md",
     "devDependencies": {
+        "@krakenjs/sync-browser-mocks": "^3.0.0",
         "babel-core": "^7.0.0-bridge.0",
         "bundlemon": "^1.1.0",
         "conventional-changelog-cli": "^2.0.34",
@@ -82,21 +83,20 @@
         "prettier": "^2.5.1",
         "prettier-plugin-sh": "^0.8.1",
         "puppeteer": "^1.20.0",
-        "serve": "^13.0.0",
-        "sync-browser-mocks": "^2.0.8"
+        "serve": "^13.0.0"
     },
     "dependencies": {
-        "@paypal/common-components": "^1.0.16",
-        "@paypal/funding-components": "^1.0.17",
-        "@paypal/sdk-client": "^4.0.156",
+        "@paypal/common-components": "^1.0.27",
+        "@paypal/funding-components": "^1.0.27",
+        "@paypal/sdk-client": "^4.0.166",
         "@paypal/sdk-constants": "^1.0.107",
-        "@paypal/sdk-logos": "^1.0.26",
-        "belter": "^1.0.2",
-        "cross-domain-utils": "^2.0.1",
-        "jsx-pragmatic": "^2",
-        "post-robot": "^10.0.0",
-        "zalgo-promise": "^1.0.10",
-        "zoid": "^9.0.0"
+        "@paypal/sdk-logos": "^1.0.45",
+        "@krakenjs/belter": "^2.0.0",
+        "@krakenjs/cross-domain-utils": "^3.0.0",
+        "@krakenjs/jsx-pragmatic": "^3",
+        "@krakenjs/post-robot": "^11.0.0",
+        "@krakenjs/zalgo-promise": "^2.0.0",
+        "@krakenjs/zoid": "^10.0.0"
     },
     "lint-staged": {
         "*.sh": "prettier --write"
