--- a/.flowconfig
+++ b/.flowconfig
@@ -10,7 +10,7 @@
 [include]
 [libs]
 flow-typed
-node_modules/grumbler-scripts/declarations.js
+node_modules/@krakenjs/grumbler-scripts/declarations.js
 node_modules/@krakenjs/zoid/src/declarations.js
 node_modules/@krakenjs/post-robot/src/declarations.js
 node_modules/@paypal/sdk-client/src/declarations.js
