--- a/package.json
+++ b/package.json
@@ -1,101 +1,103 @@
 {
-    "name": "@paypal/checkout-components",
-    "version": "5.0.235",
-    "description": "PayPal Checkout components, for integrating checkout products.",
-    "main": "index.js",
-    "scripts": {
-        "dev": "npm run check-node-version && babel-node $(npm bin)/webpack-dev-server --config webpack.config.dev.js --port 9001 --host localhost.paypal.com --open-page demo/dev/index.htm --https --hot=false --inline=false",
-        "lint": "eslint --ext .js --ext .jsx src/ test/ *.js",
-        "flow-typed": "rm -rf flow-typed && flow-typed install && rm flow-typed/npm/puppeteer_*",
-        "flow": "flow",
-        "karma": "cross-env NODE_ENV=test babel-node $(npm bin)/karma start",
-        "test": "npm run check-node-version && npm run lint && npm run flow-typed && npm run flow && npm run jest-ssr && npm run karma && npm run jest-screenshot",
-        "webpack": "babel-node $(npm bin)/webpack --progress",
-        "webpack-size": "babel-node $(npm bin)/webpack --progress --config webpack.config.size",
-        "build": "npm run test && npm run webpack",
-        "release": "./scripts/publish.sh",
-        "preversion": "./scripts/preversion.sh",
-        "version": "./scripts/version.sh",
-        "postversion": "./scripts/postversion.sh",
-        "clean": "rimraf dist coverage",
-        "reinstall": "rimraf flow-typed && rimraf node_modules && npm install && flow-typed install",
-        "debug": "cross-env NODE_ENV=debug",
-        "demo": "serve ./demo -l 1337",
-        "eslint-find-rules": "eslint-find-rules --current .eslintrc.js --unused --plugin",
-        "jest-screenshot": "jest test/screenshot --env=node --no-cache",
-        "jest-ssr": "jest test/ssr --env=node --no-cache --collectCoverage --collectCoverageFrom='src/' --coverageDirectory='coverage/jest'",
-        "jest-e2e": "rm -f ./test/e2e/screenshots/*.png && jest test/e2e",
-        "check-size": "npm run webpack-size && bundlemon && npm run delete-size",
-        "delete-size": "rm dist/size.* dist/report.html",
-        "prepare": "husky install",
-        "check-node-version": "node scripts/check-node-version.js"
-    },
-    "files": [
-        "src/",
-        "dist/",
-        "__sdk__.js",
-        "globals.js"
-    ],
-    "browserslist": [
-        "IE >= 9",
-        "chrome >= 27",
-        "firefox >= 30",
-        "safari >= 5",
-        "opera >= 23"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/paypal/paypal-checkout-components.git"
-    },
-    "homepage": "https://developer.paypal.com/",
-    "keywords": [
-        "cross-domain",
-        "cross domain",
-        "components",
-        "component",
-        "krakenjs",
-        "kraken"
-    ],
-    "license": "Apache-2.0",
-    "readmeFilename": "README.md",
-    "devDependencies": {
-        "@krakenjs/grumbler-scripts": "^7.0.0",
-        "@krakenjs/sync-browser-mocks": "^3.0.0",
-        "babel-core": "^7.0.0-bridge.0",
-        "bundlemon": "^1.1.0",
-        "conventional-changelog-cli": "^2.0.34",
-        "flow-bin": "0.155.0",
-        "fs-extra": "^10.0.0",
-        "husky": "^7.0.4",
-        "imagemagick": "^0.1.3",
-        "imgur": "^0.3.1",
-        "karma": "^6.0.0",
-        "karma-coverage": "^2.0.3",
-        "lint-staged": "^12.3.4",
-        "memory-fs": "^0.5.0",
-        "mocha": "^4.1.0",
-        "mocketeer": "^0.3.1",
-        "pixelmatch": "^5.2.1",
-        "pngjs": "^6.0.0",
-        "prettier": "^2.5.1",
-        "prettier-plugin-sh": "^0.10.0",
-        "puppeteer": "^1.20.0",
-        "serve": "^13.0.0"
-    },
-    "dependencies": {
-        "@krakenjs/belter": "^2.0.0",
-        "@krakenjs/cross-domain-utils": "^3.0.0",
-        "@krakenjs/jsx-pragmatic": "^3",
-        "@krakenjs/post-robot": "^11.0.0",
-        "@krakenjs/zalgo-promise": "^2.0.0",
-        "@krakenjs/zoid": "^10.0.0",
-        "@paypal/common-components": "^1.0.27",
-        "@paypal/funding-components": "^1.0.27",
-        "@paypal/sdk-client": "^4.0.166",
-        "@paypal/sdk-constants": "^1.0.119",
-        "@paypal/sdk-logos": "^1.0.45"
-    },
-    "lint-staged": {
-        "*.sh": "prettier --write"
-    }
+  "name": "@paypal/checkout-components",
+  "version": "5.0.235",
+  "description": "PayPal Checkout components, for integrating checkout products.",
+  "main": "index.js",
+  "scripts": {
+    "all-ci": "npm run check-node-version && npm run lint && npm run typecheck && npm run test",
+    "build": "npm run webpack",
+    "check-node-version": "node scripts/check-node-version.js",
+    "check-size": "npm run webpack-size && bundlemon && npm run delete-size",
+    "clean": "rimraf dist coverage",
+    "debug": "cross-env NODE_ENV=debug",
+    "delete-size": "rm dist/size.* dist/report.html",
+    "demo": "serve ./demo -l 1337",
+    "dev": "npm run check-node-version && babel-node $(npm bin)/webpack-dev-server --config webpack.config.dev.js --port 9001 --host localhost.paypal.com --open-page demo/dev/index.htm --https --hot=false --inline=false",
+    "eslint-find-rules": "eslint-find-rules --current .eslintrc.js --unused --plugin",
+    "flow": "flow",
+    "flow-typed": "rm -rf flow-typed && flow-typed install && rm flow-typed/npm/puppeteer_*",
+    "jest-e2e": "rm -f ./test/e2e/screenshots/*.png && jest test/e2e",
+    "jest-screenshot": "jest test/screenshot --env=node --no-cache",
+    "jest-ssr": "jest test/ssr --env=node --no-cache --collectCoverage --collectCoverageFrom='src/' --coverageDirectory='coverage/jest'",
+    "karma": "cross-env NODE_ENV=test babel-node $(npm bin)/karma start",
+    "lint": "eslint --ext .js --ext .jsx src/ test/ *.js",
+    "postversion": "./scripts/postversion.sh",
+    "preversion": "./scripts/preversion.sh",
+    "reinstall": "rimraf flow-typed && rimraf node_modules && npm install && flow-typed install",
+    "release": "./scripts/publish.sh",
+    "test": "npm run jest-ssr && npm run karma && npm run jest-screenshot",
+    "typecheck": "npm run flow-typed && npm run flow",
+    "version": "./scripts/version.sh",
+    "webpack": "babel-node $(npm bin)/webpack --progress",
+    "webpack-size": "babel-node $(npm bin)/webpack --progress --config webpack.config.size",
+    "prepare": "husky install"
+  },
+  "files": [
+    "src/",
+    "dist/",
+    "__sdk__.js",
+    "globals.js"
+  ],
+  "browserslist": [
+    "IE >= 9",
+    "chrome >= 27",
+    "firefox >= 30",
+    "safari >= 5",
+    "opera >= 23"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/paypal/paypal-checkout-components.git"
+  },
+  "homepage": "https://developer.paypal.com/",
+  "keywords": [
+    "cross-domain",
+    "cross domain",
+    "components",
+    "component",
+    "krakenjs",
+    "kraken"
+  ],
+  "license": "Apache-2.0",
+  "readmeFilename": "README.md",
+  "devDependencies": {
+    "@krakenjs/grumbler-scripts": "^7.0.0",
+    "@krakenjs/sync-browser-mocks": "^3.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "bundlemon": "^1.1.0",
+    "conventional-changelog-cli": "^2.0.34",
+    "flow-bin": "0.155.0",
+    "fs-extra": "^10.0.0",
+    "husky": "^7.0.4",
+    "imagemagick": "^0.1.3",
+    "imgur": "^0.3.1",
+    "karma": "^6.0.0",
+    "karma-coverage": "^2.0.3",
+    "lint-staged": "^12.3.4",
+    "memory-fs": "^0.5.0",
+    "mocha": "^4.1.0",
+    "mocketeer": "^0.3.1",
+    "pixelmatch": "^5.2.1",
+    "pngjs": "^6.0.0",
+    "prettier": "^2.5.1",
+    "prettier-plugin-sh": "^0.10.0",
+    "puppeteer": "^1.20.0",
+    "serve": "^13.0.0"
+  },
+  "dependencies": {
+    "@krakenjs/belter": "^2.0.0",
+    "@krakenjs/cross-domain-utils": "^3.0.0",
+    "@krakenjs/jsx-pragmatic": "^3",
+    "@krakenjs/post-robot": "^11.0.0",
+    "@krakenjs/zalgo-promise": "^2.0.0",
+    "@krakenjs/zoid": "^10.0.0",
+    "@paypal/common-components": "^1.0.27",
+    "@paypal/funding-components": "^1.0.27",
+    "@paypal/sdk-client": "^4.0.166",
+    "@paypal/sdk-constants": "^1.0.119",
+    "@paypal/sdk-logos": "^1.0.45"
+  },
+  "lint-staged": {
+    "*.sh": "prettier --write"
+  }
 }
