--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "reinstall": "rimraf flow-typed && rimraf node_modules && npm install && flow-typed install",
     "release": "./scripts/publish.sh",
     "start": "npm run webpack -- --progress --watch",
-    "test": "npm run jest-ssr && npm run karma && npm run jest-screenshot",
+    "test": "npm run test:unit && npm run jest-ssr && npm run karma && npm run jest-screenshot",
+    "test:unit": "vitest",
     "typecheck": "npm run flow-typed && npm run flow",
     "version": "./scripts/version.sh",
     "webpack": "babel-node $(npm bin)/webpack",
@@ -62,6 +63,7 @@
   "license": "Apache-2.0",
   "readmeFilename": "README.md",
   "devDependencies": {
+    "@bunchtogether/vite-plugin-flow": "^1.0.2",
     "@krakenjs/grumbler-scripts": "^8.0.7",
     "@krakenjs/sync-browser-mocks": "^3.0.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -86,7 +88,9 @@
     "prettier": "^2.5.1",
     "prettier-plugin-sh": "^0.10.0",
     "puppeteer": "^1.20.0",
-    "serve": "^13.0.0"
+    "serve": "^13.0.0",
+    "vite": "^3.2.4",
+    "vitest": "^0.25.3"
   },
   "dependencies": {
     "@krakenjs/belter": "^2.0.0",
