--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "start": "npm run webpack -- --progress --watch",
     "test": "npm run test:unit && npm run jest-ssr && npm run karma && npm run jest-screenshot",
     "test:unit": "vitest",
+    "percy-screenshot": "babel-node ./test/percy/server/createButtonConfigs.js && percy exec -- playwright test --config=./test/percy/playwright.config.js --reporter=dot --pass-with-no-tests",
     "typecheck": "npm run flow-typed && npm run flow",
     "version": "./scripts/version.sh",
     "webpack": "babel-node $(npm bin)/webpack",
     "webpack-size": "npm run webpack -- --config webpack.config.size",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "screenshot-server": "babel-node ./test/percy/server/index.js"
   },
   "files": [
     "src/",
@@ -66,6 +68,9 @@
     "@bunchtogether/vite-plugin-flow": "^1.0.2",
     "@krakenjs/grumbler-scripts": "^8.0.7",
     "@krakenjs/sync-browser-mocks": "^3.0.0",
+    "@percy/cli": "^1.16.0",
+    "@percy/playwright": "^1.0.4",
+    "@playwright/test": "^1.28.1",
     "babel-core": "^7.0.0-bridge.0",
     "bundlemon": "^1.1.0",
     "conventional-changelog-cli": "^2.0.34",
@@ -84,6 +89,7 @@
     "mocha": "^4.1.0",
     "mocketeer": "^0.3.1",
     "pixelmatch": "^5.2.1",
+    "playwright": "^1.29.1",
     "pngjs": "^6.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-sh": "^0.10.0",
