--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@bunchtogether/vite-plugin-flow": "^1.0.2",
     "@krakenjs/grumbler-scripts": "^8.0.7",
     "@krakenjs/sync-browser-mocks": "^3.0.0",
-    "@percy/cli": "^1.16.0",
+    "@percy/cli": "1.18.0",
     "@percy/playwright": "^1.0.4",
     "@playwright/test": "^1.28.1",
     "babel-core": "^7.0.0-bridge.0",
