Fix Percy Screenshot CI Failure (#2255)
* Empty commit

* Upgrade percy dependencies

* npx playwright install on percy-screenshot

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "start": "npm run webpack -- --progress --watch",
     "test": "npm run format:check && npm run test:unit && npm run jest-ssr && npm run karma && npm run jest-screenshot",
     "test:unit": "vitest run",
-    "percy-screenshot": "babel-node ./test/percy/server/createButtonConfigs.js && percy exec -- playwright test --config=./test/percy/playwright.config.js --reporter=dot --pass-with-no-tests",
+    "percy-screenshot": "npx playwright install && babel-node ./test/percy/server/createButtonConfigs.js && percy exec -- playwright test --config=./test/percy/playwright.config.js --reporter=dot --pass-with-no-tests",
     "typecheck": "npm run flow-typed && npm run flow",
     "version": "./scripts/version.sh",
     "webpack": "babel-node $(npm bin)/webpack",
@@ -70,9 +70,9 @@
     "@bunchtogether/vite-plugin-flow": "^1.0.2",
     "@krakenjs/grumbler-scripts": "^8.1.5",
     "@krakenjs/sync-browser-mocks": "^3.0.0",
-    "@percy/cli": "1.18.0",
+    "@percy/cli": "1.27.2",
     "@percy/playwright": "^1.0.4",
-    "@playwright/test": "^1.28.1",
+    "@playwright/test": "^1.38.1",
     "babel-core": "^7.0.0-bridge.0",
     "bundlemon": "^1.1.0",
     "conventional-changelog-cli": "^2.0.34",
